Bug 863123 - Set APNG attributes on the right frame, rather than one frame behind. r=seth